--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  /*font-family: 'Shadows Into Light Two', cursive;*/
+    /*font-family: 'Shadows Into Light Two', cursive;*/
   /*font-family: 'Raleway', sans-serif;*/
   /*font-family: 'Lora', serif;*/
   font-family: 'Montserrat', sans-serif;
@@ -21,4 +26,23 @@ img {
 .logo-img {
   width: 100px;
   padding: 20px;
+}
+
+
+#featured-projects{
+  text-align: center;
+}
+
+#projects {
+  display: flex;
+  justify-content: space-around;
+}
+
+.card {
+  max-width: 32%;
+  box-shadow: 5px 5px 2px rgba(0, 0, 255, 0.25);
+}
+
+.card-title{
+  text-transform: capitalize;
 }
