--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ header h1 {
   font-family: 'Montez', cursive;
 }
 
-header a {
-  text-decoration: none;
+header a:focus, a:hover {
+    text-decoration: none;
 }
 
 img {
@@ -42,7 +42,7 @@ img {
 }
 
 .card {
-  max-width: 32%;
+  /*max-width: 32%;*/
   box-shadow: 5px 5px 2px rgba(0, 0, 255, 0.25);
 }
 
@@ -50,6 +50,32 @@ img {
   text-transform: capitalize;
 }
 
+/*.card-text {
+  white-space: nowrap;
+  height: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}*/
+
 /*.card-img-top{
   height: 50%;
 }*/
+
+@media screen and (max-width: 560px) {
+  header h1 {
+    font-size: 20px;
+  }
+  header h4 {
+    font-size: 15px;
+  }
+  .logo-img {
+    width: 80px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .card {
+    max-width: 32%;
+    justify-content: space-between;
+  }
+}
