--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,9 @@ img {
   padding: 20px;
 }
 
-.banner-img {
+/*.banner-img {
   max-height: 575px;
-}
+}*/
 
 #featured-projects{
   text-align: center;
