--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header h1 {
-  font-family: 'Montez', cursive;
+  /*font-family: 'Montez', cursive;*/
 }
 
 header a:focus, a:hover {
@@ -31,6 +31,51 @@ img {
 /*.banner-img {
   max-height: 575px;
 }*/
+.overlay-container {
+    position: relative;
+    text-align: center;
+    font-family: 'Montez', cursive;
+    font-size: 40px;
+    color: black;
+}
+
+.banner-img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.overlay-text-intro {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .5s ease;
+    opacity: 0;
+}
+
+.overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    transition: .5s ease;
+    opacity: 0;
+}
+
+.overlay-container:hover .banner-img {
+  opacity: 0.4;
+}
+
+.overlay-container:hover .overlay-text-intro {
+  opacity: 1;
+}
+
+.overlay-container:hover .overlay-text {
+  opacity: 1;
+}
 
 #featured-projects{
   text-align: center;
@@ -41,9 +86,27 @@ img {
   justify-content: space-around;
 }
 
-.card {
-  /*max-width: 32%;*/
-  box-shadow: 5px 5px 2px rgba(0, 0, 255, 0.25);
+.card-img-wrap {
+  overflow: hidden;
+  position: relative;
+}
+.card-img-wrap:after {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(255,255,255,0.3);
+  opacity: 0;
+  transition: opacity .25s;
+}
+.card-img-wrap img {
+  transition: transform .25s;
+  width: 100%;
+}
+.card-img-wrap:hover img {
+  transform: scale(1.2);
+}
+.card-img-wrap:hover:after {
+  opacity: 1;
 }
 
 .card-title{
@@ -61,15 +124,18 @@ img {
   height: 50%;
 }*/
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 750px) {
   header h1 {
-    font-size: 20px;
+    font-size: 22px;
   }
   header h4 {
-    font-size: 15px;
+    font-size: 16px;
   }
   .logo-img {
     width: 80px;
+  }
+  .overlay-container {
+    font-size: 18px;
   }
 }
 
